--- a/wiki-project/package.json
+++ b/wiki-project/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.16.1",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
+    "materialize-css": "^0.98.0",
     "method-override": "^2.3.7",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
