--- a/wiki-project/package.json
+++ b/wiki-project/package.json
@@ -16,6 +16,8 @@
     "method-override": "^2.3.7",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
-    "pg-promise": "^5.5.6"
+    "pg-promise": "^5.5.6",
+    "simplesearch": "^0.1.0",
+    "time-stamp": "^1.0.1"
   }
 }
