--- a/wiki-project/package.json
+++ b/wiki-project/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "description": "wiki-project",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "engines": {
+    "node": "7.4.0"
   },
+  
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+
   "author": "Rachel Rondon",
   "license": "MIT",
   "dependencies": {
